# mh-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
examples/: user_tool_example.py
examples/client_events_demo/: demo.py
examples/dev-with-mh/: example_use_tui.py  verify_compaction.py
examples/dev-with-mh/tools/: echo_tool.py
examples/relation_digging/: main.py
src/mh_tui/: __init__.py  _session_types.py  agent_manager.py  app.py  app.tcss  at_handler.py  bash_widget.py  buffer.py  chat_widgets.py  compaction.py  constants.py  context.py  discover_agents_widget.py  display.py  error_handler.py  export_presenter.py  export_tracker.py  handoff_widget.py  jsonl_session_store.py  local_file_operation_widget.py  logging_setup.py  messages.py  modals.py  renderer.py  runtime_session.py  runtime_tools.py  session_controller.py  session_factory.py  session_replayer.py  slash_handler.py  streaming_controller.py  tool_widget_provider.py  widgets.py
src/mh_tui/actions/: __init__.py  compact.py  config.py  dump.py  interrupt.py  learn.py  new.py  quit.py  reload.py  sessions.py  share.py  team.py  tools.py
src/mh_tui/built_in/: __init__.py  bash.py  collector.py  local_file_operation.py  registry.py
tests/: test_buffer.py  test_built_in.py  test_chat_widgets.py  test_compact_action.py  test_compaction.py  test_config.py  test_context.py  test_display_live_rendering.py  test_export_presenter.py  test_interruption.py  test_markdown_styles.py  test_renderer.py  test_session_controller.py  test_session_manager.py  test_slash_handler.py  test_widgets.py
(+7 files in other folders)
