[project]
name = "mh-tui"
version = "0.1.0a1"
description = "Terminal UI client for minimal-harness. The local-running counterpart of mh-orchestration-service."
readme = "README.md"
authors = [
    { name = "J0ey1iu", email = "joeyliu086@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "minimal-harness>=0.7.0a1",
    "rich>=13.0.0",
    "textual>=0.80.0",
]

[project.scripts]
mhc = "mh_tui.app:main"

[project.urls]
source = "https://github.com/J0ey1iu/mh-tui"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
minimal-harness = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mh_tui = ["py.typed", "*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "pyright",
    "textual-dev",
]
